phone responsive contact form, fixed jump from nav to sections

--- a/project/style.css
+++ b/project/style.css
@@ -5,8 +5,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 4rem;
 }
 body {
   font-family: "Familjen Grotesk", sans-serif;
@@ -16,17 +18,14 @@ body {
 }
 /* HERO section */
 .section-hero {
-height: 30%;
 background: url(img/background2.jpg);
   background-position: center;
   background-size: 100% 100%;
   background-repeat: no-repeat;
- 
   display: flex;
   justify-content: center;
   align-items: center;
   height: 300px;
-  
 }
 
 .hero-title {
@@ -82,7 +81,6 @@ section {
   padding: 1rem;
 }
 .about {
-  /* padding: 30px 0 50px 0; */
   background-color: #fcf0e6;
   display: flex;
   flex-direction: column;
@@ -115,7 +113,7 @@ nav a {
 /* Contact form */
 
 .form-container {
-  max-width: 50%;
+  max-width: 500px;
   margin: 0 auto;
   text-align: center;
 }
@@ -153,8 +151,9 @@ textarea {
   padding: 30px 0 0 0;
 }
 .btn-message {
+  
   border: none;
-  padding: 10px 20px;
+  padding: 8px 50px;
   background-color: #03478b;
   color: #feede0;
   border-radius: 3px;
@@ -169,7 +168,6 @@ button:hover {
 }
 
 nav ul {
-  /* background-color: #fcf0e6; */
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -217,7 +215,8 @@ nav ul {
   font-style: italic;
   color: rgb(68, 68, 68, 0.6);
 }
-.see-more a:link {
+.see-more a:link,
+a:visited {
   color: #03478b;
   text-decoration: none;
 }
@@ -290,6 +289,7 @@ span {
   background-color: transparent;
   box-shadow: none;
   border: none;
+  margin-right: 2rem;
 }
 .mobile:hover {
   border-radius: 3px;
@@ -358,6 +358,10 @@ span {
   .hero-title {
     font-size: 2rem;
   }
+  .author {
+   
+    padding-left: 2rem;
+  }
 }
 
 
@@ -382,6 +386,7 @@ span {
   }
   .author {
     font-size: 1.3rem;
+    padding-left: 2rem;
   }
   .project {
     text-align: center;
@@ -393,7 +398,7 @@ span {
     height: 2rem;
   }
   .form label {
-  margin-bottom: 10px;
     text-align: center;
-}
+    margin-bottom: 10px;
+  }
 }
