--- a/project/style2.css
+++ b/project/style2.css
@@ -7,6 +7,7 @@
 }
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 4rem;
 }
 body {
   font-family: "Familjen Grotesk", sans-serif;
@@ -70,7 +71,7 @@ nav a {
 /* Contact form */
 
 .form-container {
-  max-width: 50%;
+  max-width: 500px;
   margin: 0 auto;
   text-align: center;
 }
@@ -81,7 +82,7 @@ nav a {
 .form label {
   display: inline-block;
   text-align: left;
-  width: 120px;
+  width: 20%;
   font-size: 15px;
   font-family: inherit;
   color: #444;
@@ -108,7 +109,7 @@ textarea {
 }
 .btn-message {
   border: none;
-  padding: 10px 20px;
+  padding: 8px 50px;
   background-color: #03478b;
   color: #feede0;
   border-radius: 3px;
@@ -116,14 +117,15 @@ textarea {
   font-size: 15px;
   font-weight: 700;
 }
-button:hover {
+.btn-message:hover,
+.btn-back:hover
+ {
   color: #fff;
   box-shadow: 4px 8px 10px rgb(154, 191, 233, 0.9);
   cursor: pointer;
 }
 
 nav ul {
-  /* background-color: #fcf0e6; */
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -134,7 +136,6 @@ nav ul {
 }
 
 .author {
-
   padding-left: 4rem;
   font-size: 1.4rem;
   letter-spacing: 0.5px;
@@ -149,11 +150,13 @@ nav ul {
   background-color: transparent;
   box-shadow: none;
   border: none;
+  margin-right: 2rem;
 }
 .mobile:hover {
   border-radius: 3px;
   padding: 1px;
   background-color: #fcf0e6;
+  box-shadow: 4px 8px 10px #9abfe9;
 }
 
 .bg {
@@ -234,9 +237,6 @@ nav ul {
   background-color: #0b68bf;
 }
 
-/* do smth at this breakpoint */
-@media (max-width: 700px) {
-}
 
 /* do smth at this breakpoint */
 @media (max-width: 1020px) {
@@ -255,11 +255,9 @@ nav ul {
     width: 100%;
   }
   ul.responsive li {
-   
     display: block;
     margin: 1rem;
     margin-left: 4rem;
-
   }
   .navigation-bar.responsive{
     background-color: #fcf0e6;
@@ -267,9 +265,12 @@ nav ul {
   .hero-title {
     font-size: 2rem;
   }
+  .author {
+    padding-left: 2rem;
+  }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 880px) {
   .about-box {
     flex-direction: column;
     gap: 1rem;
@@ -288,6 +289,7 @@ nav ul {
   }
   .author {
     font-size: 1.3rem;
+    padding-left: 2rem;
   }
   .project {
     text-align: center;
@@ -297,5 +299,9 @@ nav ul {
   }
   .sticky {
     height: 2rem;
+  }
+  .form label {
+    text-align: center;
+    margin-bottom: 10px;
   }
 }
